# ferrous

./: Cargo.toml  LUA_REDESIGN.md  LUA_SPECIFICATION.md  README.md  check_vm_impl.py  clean_root.sh  concat_test.py  control_flow_test.lua  create_test_dirs.sh  debug_for_loop.lua  dump_bytecode.lua  dynamic_string_test.lua  ferrous-development.conf  ferrous-monitoring.conf  ferrous-production.conf  field_test.lua  interning_debug.lua  master.conf  math_custom_test.lua  minimal_for_loop.lua  minimal_ipairs.lua  minimal_method_test.lua  minimal_table_loop.lua  organize_tests.sh  param_test.lua  ping_test.py  pipeline_test.py  replica.conf  run_iterator_tests.sh  run_tests.sh  run_validation_suite.sh  simple_for_loop.lua  simple_for_table_test.lua  simple_ipairs.lua  simple_loop_debug.lua  simple_method_test.lua  simple_table_loop_test.lua  simple_table_loop_test_fixed.lua  simple_table_test.lua  simple_test.lua  (+80 more)
docs/: ARCHITECTURE.md  BLOG_REPLICATION_ANNOUNCEMENT.md  CURRENT_STATUS_AND_BASELINE.md  DESIGN.md  HANDLE_VALIDATION_GUIDE.md  LUA_51_SPECIFICATION_REFERENCE.md  LUA_ARCHITECTURE.md  LUA_CLOSURE_IMPLEMENTATION.md  LUA_COMPATIBILITY_REPORT.md  LUA_CURRENT_IMPLEMENTATION_STATUS.md  LUA_C_FUNCTION_INTERFACE_CONVENTIONS.md  LUA_DEBUGGING_COHERENCE.md  LUA_GIL_DESIGN.md  LUA_IMPLEMENTATION_CHECKLIST.md  LUA_IMPLEMENTATION_PATTERNS.md  LUA_IMPLEMENTATION_ROADMAP.md  LUA_IMPLEMENTATION_SEQUENCE.md  LUA_IMPLEMENTATION_STATUS.md  LUA_IMPLEMENTATION_TEST_PLAN.md  LUA_ITERATOR_IMPLEMENTATION_GUIDE.md  LUA_MLUA_ARCHITECTURE.md  LUA_OPCODE_CONTRACT.md  LUA_OPCODE_REGISTER_CONVENTIONS.md  LUA_OPCODE_REGISTER_CONVENTIONS_UPDATED.md  LUA_REDESIGN.md  LUA_REGISTER_ALLOCATION_CONTRACT.md  LUA_SPECIFICATION.md  LUA_STRING_INTERNING_AND_VALUE_SEMANTICS.md  LUA_TABLE_VALUE_SEMANTICS.md  LUA_TEST_PLAN.md  LUA_TFORLOOP_FIX_GUIDE.md  LUA_TRANSACTION_PATTERNS.md  LUA_UNIFIED_STACK_ARCHITECTURE.md  LUA_VM_ARCHITECTURAL_ISSUES.md  LUA_VM_COMPLETION_ROADMAP.md  LUA_VM_CORE_COMPLETION_PLAN.md  LUA_VM_FIXES_JULY_2025.md  LUA_VM_IMPLEMENTATION_PLAN.md  LUA_VM_JULY_2025_FIXES.md  LUA_VM_PERFORMANT_HYBRID_DESIGN.md  (+26 more)
examples/: for_loop_comparison.rs  replication_config_examples.md  stream_example.rs
src/: error.rs  lib.rs  main.rs  main_replica.rs  monitor.rs  pubsub.rs
src/config/: cli.rs  mod.rs  parser.rs
src/lua/: arena.rs  ast.rs  codegen.rs  codegen_tforloop_fix.rs  command.rs  compiler.rs  error.rs  executor.rs  handle.rs  heap.rs  lexer.rs  metamethod.rs  mod.rs  parser.rs  rc_handle.rs  rc_heap.rs  rc_stdlib.rs  rc_value.rs  rc_vm.rs  redis_api.rs  refcell_heap.rs  refcell_stdlib.rs  refcell_vm.rs  register_management.rs  register_window.rs  resource.rs  simple_test.rs  stdlib.rs  test_basic.rs  (+7 more)
tests/: README.md  debug_error_hang.py  debug_lua_compilation.py  debug_lua_hanging.py  debug_setnx.py  end_to_end_lua.rs  integration_lua.rs  lua_deadlock_debug.py  lua_spec_tests.rs  manual_consumer_groups_test.py  register_window_integration.rs  run_atomic_tests.sh  run_default_tests.sh  run_lua_tests.rs  run_performance_tests.sh  run_validation_tests.sh  script_load_debug.py  simple_upvalue.lua  test_abort_mechanism.py  test_upvalues.rs  upvalue_test.lua  upvalue_tests.rs  validate_consumer_groups.sh
(+251 files in other folders)
