[package]
name = "ferrous"
version = "0.1.0"
edition = "2021"
authors = ["Ferrous Contributors"]
description = "A Redis-compatible in-memory database server written in pure Rust"
repository = "https://github.com/ferrous-db/ferrous"
license = "MIT OR Apache-2.0"
keywords = ["redis", "database", "cache", "nosql"]
categories = ["database", "caching"]

[dependencies]
lazy_static = "1.4"
rand = "0.8.5"
thiserror = "1.0"
futures = "0.3" # For async/await support
sha1 = "0.10.5" # For Lua script SHA1 computation
hex = "0.4.3" # For hex encoding of SHA1 hashes
uuid = { version = "1.3.0", features = ["v4"] } # For transaction IDs
tokio = { version = "1.0", features = ["rt", "time"] } # For async operations and timeouts

[dev-dependencies]
# Only for testing and benchmarking
tempfile = "3.5.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.bench]
lto = true
opt-level = 3

[[bin]]
name = "compile_and_execute"
path = "src/bin/compile_and_execute.rs"

[[bin]]
name = "lua_compiler_test"
path = "src/bin/lua_compiler_test.rs"

[[bin]]
name = "standalone_lua_test"
path = "src/bin/standalone_lua_test.rs"

[[bin]]
name = "run_lua_tests"
path = "src/bin/run_lua_tests.rs"

[[bin]]
name = "test_stdlib"
path = "src/bin/test_stdlib.rs"